test/spec_vectors/simd_i16x8_cmp/fail/module_10.wat
(module (func (result v128) (i16x8.ne (i32.const 0) (f32.const 0))))